<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="search"
        android:id="@+id/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/notify"
        android:icon="@drawable/notification"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/login"
        android:title="@string/signup" />
    <item
        android:id="@+id/help"
        android:title="@string/helpline_number" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit" />
</menu>