<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/donut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.droidcafe.MainActivity">


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icecream_description"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/menu_list"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <ImageView
        android:id="@+id/donuts"
        android:layout_width="131dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/donuts_are_glazed_and_sprinkled_with_candy"
        android:onClick="showDonutOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/froyo"
        app:srcCompat="@drawable/donuts"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/icecream"
        android:layout_width="144dp"
        android:layout_height="169dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/icecream_is_delicious_dessert"
        android:onClick="showIceCreamOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donuts"
        app:srcCompat="@drawable/ice_cream"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/donut_description"
        android:layout_width="229dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="4dp"
        android:text="@string/donuts_are_glazed_and_sprinkled_with_candy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/froyo_description" />

    <TextView
        android:id="@+id/icecream_description"
        android:layout_width="226dp"
        android:layout_height="39dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="4dp"
        android:text="@string/icecream_is_delicious_dessert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donut_description" />

    <TextView
        android:id="@+id/froyo_description"
        android:layout_width="231dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/froyo_is_premium_self_serve_frozen_yogurt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textintro" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="125dp"
        android:layout_height="114dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/froyo_is_premium_self_serve_frozen_yogurt"
        android:onClick="showFroyoOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textintro"
        app:srcCompat="@drawable/froyo"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:contentDescription="@string/shopping_cart_clicked"
        android:contextClickable="true"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toEndOf="@+id/icecream"
        app:layout_constraintTop_toBottomOf="@+id/icecream_description"
        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />


</androidx.constraintlayout.widget.ConstraintLayout>